// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides and shows overlay based on mouse entering and leaving Item wrapper 1`] = `
<li
  class="sc-bxivhb fuAhs"
>
  <a
    class="sc-ifAKCX GbWcO"
    href="/item/ariana-grande"
  >
    <div
      class="sc-htpNat enMeJG"
    >
      <section
        class="sc-dnqmqq hVFvkw"
      >
        <h3
          class="sc-EHOje jLcawZ"
        >
          Ariana Grande
        </h3>
        <p
          class="sc-iwsKbI jESQb sc-bZQynM geAaEl"
        >
          10
        </p>
        <div
          class="sc-gzVnrw hbRlsB"
        >
          <p
            class="sc-htoDjs gGoPmJ sc-bZQynM geAaEl"
          >
            2
          </p>
          <svg
            viewBox="0 0 50 90"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M50.005 90L25.003 67.452 0 90V0h50.005v90z"
              fill="currentColor"
            />
          </svg>
        </div>
      </section>
    </div>
    <div
      class="sc-gqjmRU dnuGoN"
    />
    <div
      class="sc-bdVaJa dMhIUw"
    >
      <img
        class="sc-bwzfXH iIjYES"
        src="undefinedariana-grande.png"
      />
    </div>
    <p
      class="sc-gZMcBi iufjnt sc-bZQynM geAaEl fade-out-exit fade-out-exit-active"
    >
      10
    </p>
  </a>
</li>
`;

exports[`hides and shows overlay based on mouse entering and leaving Item wrapper 2`] = `
<li
  class="sc-bxivhb fuAhs"
>
  <a
    class="sc-ifAKCX GbWcO"
    href="/item/ariana-grande"
  >
    <div
      class="sc-bdVaJa dMhIUw"
    >
      <img
        class="sc-bwzfXH iIjYES"
        src="undefinedariana-grande.png"
      />
    </div>
    <p
      class="sc-gZMcBi iufjnt sc-bZQynM geAaEl fade-out-enter fade-out-enter-active"
    >
      10
    </p>
  </a>
</li>
`;
